--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/neotree"]
 	path = lib/neotree
 	url = git://github.com/jaypei/emacs-neotree.git
+[submodule "lib/coffee-mode"]
+	path = lib/coffee-mode
+	url = git://github.com/defunkt/coffee-mode.git
