--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lib/scss-mode"]
 	path = lib/scss-mode
 	url = git://github.com/antonj/scss-mode.git
+[submodule "lib/web-mode"]
+	path = lib/web-mode
+	url = git://github.com/fxbois/web-mode.git
